that's the last commit, official i dont want go back here pls

--- a/bmw.html
+++ b/bmw.html
@@ -142,7 +142,7 @@
         <video loop autoplay controls width="100%">
             <source src="img/bmw/cars/VIDEO_BMW.mp4">
         </video>
-        <!-- COMEÇO DO CATÁLAGO TODO -->
+        <!-- COMEÇO DO CATÁLAGO PART 1 -->
         <div class="control">
         <div class="card-group">
             <div class="card">
@@ -279,13 +279,13 @@
         <!-- <FINAL PART 1 CATALOGO -->
 
         <!-- COMEÇO BANNER -->
-        <img src="img/bmw/cars/C10_BANNER.jpg"
+        <img src="img/bmw/cars/C10_BANNER.jpg" style="width: 100%;">
         <!-- FINAL BANNER -->
 
         <!-- COMEÇO PART 2 CATALOGO -->
         <div class="card-group">
             <div class="card">
-                <img src="img/outras/CarroEmBreve.jpg" class="card-img-top" alt="...">
+                <img src="img/outras/CarroEmBreve.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">
                             EM BREVE
@@ -301,7 +301,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="img/outras/CarroEmBreve.jpg" class="card-img-top" alt="...">
+                <img src="img/outras/CarroEmBreve.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">
                             EM BREVE
@@ -317,7 +317,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="img/outras/CarroEmBreve.jpg" class="card-img-top" alt="...">
+                <img src="img/outras/CarroEmBreve.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">
                         EM BREVE
@@ -333,7 +333,7 @@
                 </div>
             </div>
         </div>      
-        <!-- FIM DO CATÁLAGO TODO -->
+        <!-- FIM DO CATÁLAGO PART 2 -->
 
         <!-- COMEÇO DO JUMBOTRON -->
         <div class="jumbotron jumbotron-fluid" style="background-color: #DCDCDC;">
