--- a/mercedes.html
+++ b/mercedes.html
@@ -136,7 +136,7 @@
         <video loop autoplay controls width="100%">
             <source src="img/mercedes/cars/VIDEO_MERCEDES.mp4">
         </video>
-        <!-- COMEÇO DO CATÁLAGO TODO -->
+        <!-- COMEÇO DO CATÁLAGO PART 1 -->
         <div class="card-group">
             <div class="card">
                 <img src="img/mercedes/cars/C1_CARD-CATALOGO.png" class="card-img-top" alt="...">
@@ -260,7 +260,64 @@
             </div>
         </div>     
         <!-- FIM DO CATÁLAGO TODO -->
+         <!-- <FINAL PART 1 CATALOGO -->
 
+        <!-- COMEÇO BANNER -->
+        <img src="img/mercedes/cars/C10_BANNER.jpg" style="width: 100%;">
+        <!-- FINAL BANNER -->
+
+        <!-- COMEÇO PART 2 CATALOGO -->
+        <div class="card-group">
+            <div class="card">
+                <img src="img/outras/CarroEmBreve.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">
+                            EM BREVE
+                    </h5>
+                    <p class="card-text">
+                        Em breve mais um veiculo para a loja
+                    </p>
+                    <p class="card-text">
+                        <small class="text-muted">
+                            R$ *.***.***,**
+                        </small>
+                    </p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="img/outras/CarroEmBreve.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">
+                            EM BREVE
+                    </h5>
+                    <p class="card-text">
+                        Em breve mais um veiculo para a loja
+                    </p>
+                    <p class="card-text">
+                        <small class="text-muted">
+                            R$ *.***.***,**
+                        </small>
+                    </p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="img/outras/CarroEmBreve.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">
+                        EM BREVE
+                    </h5>
+                    <p class="card-text">
+                        Em breve mais um veiculo para a loja
+                    </p>
+                    <p class="card-text">
+                        <small class="text-muted">
+                            R$ *.***.***,**
+                        </small>
+                    </p>
+                </div>
+            </div>
+        </div>      
+        <!-- FIM DO CATÁLAGO PART 2 -->
         <!-- COMEÇO DO JUMBOTRON -->
         <div class="jumbotron jumbotron-fluid" style="background-color: #DCDCDC;">
             <div class="container">
